<?xml version="1.0"?>
<package>
  <name>px4_sitl_gazebo</name>
  <version>1.0.0</version>
  <description>The px4_sitl_gazebo package</description>

  <maintainer email="luc.oth@gmail.com">Luc Oth</maintainer>

  <license>BSD 3-clause</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>eigen</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>gazebo</build_depend>
  <build_depend>libogre-dev</build_depend>
  <build_depend>protobuf-dev</build_depend>
  <run_depend>eigen</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>gazebo</run_depend>
  <run_depend>libogre-dev</run_depend>
  <run_depend>protobuf-dev</run_depend>

</package>
